# agent-auth-e2e

./: .gitignore  end-to-end-simplified.mermaid  end-to-end.mermaid
agent_service/: pyproject.toml
agent_service/src/agent_service/: auth_utils.py  config.py  main.py
tool_service/: pyproject.toml
tool_service/src/tool_service/: auth_utils.py  config.py  main.py
webapp_ui_bff/: pyproject.toml
webapp_ui_bff/src/webapp_ui_bff/: auth_utils.py  config.py  main.py  session_data.py
webapp_ui_bff/src/webapp_ui_bff/static/css/: style.css
webapp_ui_bff/src/webapp_ui_bff/static/js/: app.js
webapp_ui_bff/src/webapp_ui_bff/templates/: index.html
